# Project_Buddy

./: .env.example  .gitignore  README.md  project_file_structure  pyproject.toml  requirements.txt
assets/: ARCHITECTURE.md  FLOW.md  LOCKED_RULES.md  OS_concepts.md
buddy/: main.py
buddy/brain/: action_router.py  brain.py  intent_interceptor.py  output_parser.py  prompt_builder.py  text_reader.py
buddy/brain/types/: actions.py  signals.py  traces.py
buddy/buddy_core/: boot.py  bootstrap_llama.py  context_budget.py  llama_installer.py  model_selector.py  pipeline.py  searxng_setup.py  smart_truncator.py  vision_selector.py
buddy/config/: buddy.toml  tools.toml
buddy/context/: conversations.py
buddy/embeddings/: embedding_provider.py
buddy/llm/: json_repair.py  llama_client.py
buddy/logger/: logger.py
buddy/memory/: Memory_Engine_Understanding_Guide.docx  README.md  consolidation_engine.py  memory_entry.py  memory_manager.py  sqlite_store.py  vector_store.py
buddy/prompts/: base_system_prompts.py  brain_prompts.py  browser_prompts.py  clipboard_prompts.py  edit_file_prompts.py  executor_prompts.py  filesystem_prompts.py  manage_file_prompts.py  memory_prompts.py  planner_prompts.py  read_file_prompts.py  reader_prompts.py  respond_prompts.py  search_file_prompts.py  system_control_prompts.py  terminal_prompts.py  vision_prompts.py  web_fetch_prompts.py  web_search_prompts.py
buddy/prompts/lock/: prompts.lock.json
buddy/schema/: models.py
buddy/tests/: buddy_memory_tests.py  test_brain_prompt.py  test_consolidation.py  test_consolidation_benchmark.py  test_consolidation_v4_solid.py  test_context_budget.py  test_executor_prompt.py  test_filesystem_tool.py  test_prompt.py  test_retrieval_prompt.py  test_time_range.py  test_v3_vs_v4_differential.py  test_web_search_tool.py
buddy/tools/: registry.py
buddy/ui/: boot_ui.py  face_frames.py  stt.py  stt_v1.8.py  textual_app.py  tts.py  widgets.py
(+14 files in other folders)
